--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/maps_api_key"/>
         <activity android:name=".restaurants.RestaurantDetailsActivity"></activity>
         <activity android:name=".restaurants.RestaurantsActivity" />
         <activity android:name=".SplashActivity">
