--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.restaurantsapplication">
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -15,7 +14,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/maps_api_key"/>
         <activity android:name=".restaurants.RestaurantDetailsActivity"
-            android:theme="@style/AppThemeNoActionBar"></activity>
+            android:theme="@style/AppThemeNoActionBar"/>
         <activity android:name=".restaurants.RestaurantsActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
@@ -24,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
